Test PostScript printing in the print sample if it is compiled in.

Just use wxUSE_POSTSCRIPT instead of wxTEST_POSTSCRIPT_IN_MSW and also do it
under all platforms, not just MSW.

See #1244.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@73628 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775